# ESP32-CAM-Video-Recorder-junior

./: .gitmodules  CMakeLists.txt  README.md  install_espidf.sh  sdkconfig
.github/workflows/: idf_build.yml
components/auto_connect/: CMakeLists.txt  auto_connect.cpp  auto_connect.h
components/device/: CMakeLists.txt  device.cpp  device.h
main/: CMakeLists.txt  auto_connect.cpp  auto_connect.h  device_info.cpp  device_info.h  main.cpp
